--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="description" content="Portfolio To your site">
     <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="Adithya Pai B">
+    <meta name="author" content="Saksham Checker">
     <script src="https://kit.fontawesome.com/4019246ab4.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon"
         href="https://raw.githubusercontent.com/adithyapaib/Neomorphic-PortfolioTemplate/main/assets/img/me.jpg"
         type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <title>Beautiful Portfolio Template</title>
+    <title>Saksham Checker</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 </head>
@@ -56,7 +56,7 @@
             <div class="h1" data-aos="zoom-in-up" data-aos-duration="3000">
                 <h1>
                     <!--Enter your Name here -->
-                    <a> Adithya Pai B <b>|</b></a>
+                    <a> Saksham Checker <b>|</b></a>
                 </h1>
                 <!--Enter your Specializations here  -->
                 <div id="typed-strings">
@@ -164,7 +164,7 @@
                 <ul>
                     <!--Enter your social media links here-->
                     <li><a href="https://github.com/sakshamchecker"><i class="fab fa-github gt1"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/sakshamchecker><i class="fab fa-linkedin-in ln1"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/sakshamchecker"><i class="fab fa-linkedin-in ln1"></i></a></li>
                     <li><a href="mail:checkersaksham01@gmail.com"><i class="fas fa-at el1"></i></a></li>
                     <li><a href="https://twitter.com/sakshamchecker"><i class="fab fa-twitter twtr1"></i></a></li>
                 </ul>
@@ -180,13 +180,13 @@
         <span>Projects <i class="fas fa-project-diagram"></i></span>
         <div class="project-card" data-aos="zoom-in-up" data-aos-duration="2000">
             <!--Use the sample tempalte below for other projects of urs-->
-            <img src="https://adithyapai.com/img/project1.png" alt="">
-            <div class="title">Portfolio Site</div>
+            <img src="https://sakshamchecker.github.io/img/project1.png" alt="">
+            <div class="title">Satellite Image Classification using CNN</div>
             <div class="dec">
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta odio voluptatibus consectetur
-                    assumenda vel, ipsa natus. Suscipit modi dolores laborum fugit? Odio, cum. Maxime commodi non
-                    sapiente nemo tenetur natus.</p>
-                <br> <a href="https://adithyapai.com">Visit Site</a>
+                <p> Satellites are used for weather analysis. Satellite images can be used to predict the type of terrain in an area. This project uses images of different classes to detect the type of terrain or to classify the area as cloudy.</p>
+                <br> <a href="https://sakshamchecker.medium.com/satellite-images-classification-using-cnn-5e9a44eafc2">Medium</a>
+                <br> <a href="https://github.com/sakshamchecker/SateliteImageClassification">Github</a>
+
             </div>
         </div>
         <div class="project-card" data-aos="zoom-in-up" data-aos-duration="1500">
