--- a/index.html
+++ b/index.html
@@ -180,23 +180,21 @@
         <span>Projects <i class="fas fa-project-diagram"></i></span>
         <div class="project-card" data-aos="zoom-in-up" data-aos-duration="2000">
             <!--Use the sample tempalte below for other projects of urs-->
-            <img src="https://sakshamchecker.github.io/img/project1.png" alt="">
+            <img src="https://sakshamchecker.github.io/portfolio-template/img/project1.png" alt="">
             <div class="title">Satellite Image Classification using CNN</div>
             <div class="dec">
                 <p> Satellites are used for weather analysis. Satellite images can be used to predict the type of terrain in an area. This project uses images of different classes to detect the type of terrain or to classify the area as cloudy.</p>
                 <br> <a href="https://sakshamchecker.medium.com/satellite-images-classification-using-cnn-5e9a44eafc2">Medium</a>
-                <br> <a href="https://github.com/sakshamchecker/SateliteImageClassification">Github</a>
+                <!-- <br> <a href="https://github.com/sakshamchecker/SateliteImageClassification">Github</a> -->
 
             </div>
         </div>
         <div class="project-card" data-aos="zoom-in-up" data-aos-duration="1500">
-            <img src="https://adithyapai.com/img/project2.png" alt="">
-            <div class="title">Random Color Gen</div>
+            <img src="https://sakshamchecker.github.io/portfolio-template/img/project2.jpeg" alt="">
+            <div class="title">Human Activity Recognition</div>
             <div class="dec">
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta odio voluptatibus consectetur
-                    assumenda vel, ipsa natus. Suscipit modi dolores laborum fugit? Odio, cum. Maxime commodi non
-                    sapiente nemo tenetur natus.</p>
-                <br> <a href="https://adithyapai.com">Visit Site</a>
+                <p> There are multiple sensors in a phone such as accelerometer, gyroscope sensors etc. These sensors can be used to detect the activity of the owner of the phone. The major implementation of this techniques is smart watches and fitness bands. The hand-wears detect the activity of the owner and thus calculate the number of calories burnt by them during the activities.</p>
+                <br> <a href="https://sakshamchecker.medium.com/human-activity-recognition-7abaa9a1cf34">Medium</a>
             </div>
         </div>
         <div class="project-card" data-aos="zoom-in-up" data-aos-duration="1500">
