--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="asset/css/main.css" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#000000" />
     <meta name="description" content="Portfolio To your site">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Saksham Checker">
     <script src="https://kit.fontawesome.com/4019246ab4.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon"
-        href="https://raw.githubusercontent.com/adithyapaib/Neomorphic-PortfolioTemplate/main/assets/img/me.jpg"
+        href="https://raw.githubusercontent.com/sakshamchecker/portfolio-template/main/asset/img/Portrait.png"
         type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
