--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="asset/css/main.css" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Portfolio To your site">
+    <meta name="description" content="AI-ML Enthusiast">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Saksham Checker">
     <script src="https://kit.fontawesome.com/4019246ab4.js" crossorigin="anonymous"></script>
@@ -33,7 +33,7 @@
             <li class="uc nav-item"><a href="#projects" rel="“noreferrer”" class="nav-link active">Projects</a></li>
 
             <li class="uc nav-item"><a href="#publications" rel="“noreferrer”" class="nav-link active">Publications</a></li>
-
+            <li class="uc nav-item"><a href="https://blog.sakshamchecker.me" rel="“noreferrer”" class="nav-link active">Medium</a></li>
 
               <li>    </li>
             </ul>
@@ -50,7 +50,8 @@
             <li class="uc nav-item"><a href="#projects" rel="“noreferrer”" class="nav-link active">Projects</a></li>
 
             <li class="uc nav-item"><a href="#publications" rel="“noreferrer”" class="nav-link active">Publications</a></li>
-
+            <li class="uc nav-item"><a href="https://blog.sakshamchecker.me" rel="“noreferrer”" class="nav-link active">Medium</a></li>
+            
             <li>    </li>
 
           </ul>
