--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p>Hi there! I am Saksham Checker from New Delhi, 🇮🇳<br>
 			I am currently pursuing Bachelor of Engineering from Delhi Technological University.<br>
 			</p>
-		        <a class="resume" href="https://resume.sakshamchecker.me">Resume</a>
+		        <a class="resume" href="resume.html">Resume</a>
             </div>
         </div>
         <div class="container container2">
