--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="AI-ML Enthusiast">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Saksham Checker">
+    <meta name='image' content='https://raw.githubusercontent.com/sakshamchecker/portfolio-template/main/asset/img/Portrait.png'>
     <script src="https://kit.fontawesome.com/4019246ab4.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon"
         href="https://raw.githubusercontent.com/sakshamchecker/portfolio-template/main/asset/img/Portrait.png"
