added brain tumor

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p>Hi there! I am Saksham Checker from New Delhi, 🇮🇳<br>
 			I am currently pursuing Bachelor of Engineering from Delhi Technological University.<br>
 			</p>
-		        <a class="resume" href="resume.html">Resume</a>
+		        <a class="resume" href="/asset/img/resume.pdf">Resume</a>
             </div>
         </div>
         <div class="container container2">
@@ -214,6 +214,14 @@
             <div class="dec">
                 <p> Every e-commerce website works with a recommendation system to provide the customer with best recommendations on what they might be willing to buy. This article covers how Natural Language Processing can be used to recommend products for the customer. The models are tested for Fashion products. The project is also presented as to complete the course of CO102 at Delhi Technological University.</p>
                 <br> <a href="https://sakshamchecker.medium.com/amazon-product-recommendation-system-855c9d3df481">Medium</a>
+            </div>
+        </div>
+        <div class="project-card" data-aos="zoom-in-up" data-aos-duration="1500">
+            <img src="https://miro.medium.com/max/1400/0*5n4MHs1cGh6RrZJs.jpg" alt="">
+            <div class="title">Brain Tumor Segmentation</div>
+            <div class="dec">
+                <p> Accurate automatic algorithms for the segmentation of brain tumors have the potential of improving disease diagnosis, treatment planning, as well as enabling large-scale studies of the pathology. This article presents the implementation of two Deep Learning models which are used for segmentation of brain tumor using the images available in a dataset on Kaggle.</p>
+                <br> <a href="https://sakshamchecker.medium.com/brain-tumor-segmentation-using-deep-learning-models-5047984b53c0">Medium</a>
             </div>
         </div>
     </div>
