--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     <title>Saksham Checker</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+        <script>
+            $(function () {
+                setTimeout(function () { goToSecondTab(); }, 5000);
+                function goToSecondTab() {
+                    window.location.hash = '#about';
+                }
+            });
+    </script>
 </head>
 
 <body>
@@ -34,7 +43,7 @@
             <li class="uc nav-item"><a href="#projects" rel="“noreferrer”" class="nav-link active">Projects</a></li>
 
             <li class="uc nav-item"><a href="#publications" rel="“noreferrer”" class="nav-link active">Publications</a></li>
-            <li class="uc nav-item"><a href="https://blog.sakshamchecker.me" rel="“noreferrer”" class="nav-link active">Medium</a></li>
+            <li class="uc nav-item"><a href="https://blog.sakshamchecker.me" rel="“noreferrer”" class="nav-link active">Blog</a></li>
 
               <li>    </li>
             </ul>
@@ -51,7 +60,7 @@
             <li class="uc nav-item"><a href="#projects" rel="“noreferrer”" class="nav-link active">Projects</a></li>
 
             <li class="uc nav-item"><a href="#publications" rel="“noreferrer”" class="nav-link active">Publications</a></li>
-            <li class="uc nav-item"><a href="https://blog.sakshamchecker.me" rel="“noreferrer”" class="nav-link active">Medium</a></li>
+            <li class="uc nav-item"><a href="https://blog.sakshamchecker.me" rel="“noreferrer”" class="nav-link active">Blog</a></li>
             
             <li>    </li>
 
