Updated Image source

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="description" content="AI-ML Enthusiast">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Saksham Checker">
-    <meta name='image' content='https://raw.githubusercontent.com/sakshamchecker/portfolio-template/main/asset/img/Portrait.png'>
+    <meta name='image' content='asset/img/Portrait.png'>
     <script src="https://kit.fontawesome.com/4019246ab4.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon"
-        href="https://raw.githubusercontent.com/sakshamchecker/portfolio-template/main/asset/img/Portrait.png"
+        href="asset/img/Portrait.png"
         type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -97,7 +97,7 @@
                 <div class="title">About Me</div>
                 <!--Add ur Image here make sure it is a square Image eg: 300x300px-->
                 <div class="img"><img
-                        src="https://raw.githubusercontent.com/sakshamchecker/portfolio-template/main/asset/img/Portrait.png"
+                        src="asset/img/Portrait.png"
                         alt="myimage"></div>
                 <!--
 				  Enter Your description here
