--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </script>
 </head>
 
-<body>
+<body oncontextmenu="return false;"  onmousedown = 'return false;' onselectstart = 'return false;' >
 
     <!--Header-->
     <div id="header"> 
@@ -43,7 +43,7 @@
             <li class="uc nav-item"><a href="#projects" rel="“noreferrer”" class="nav-link active">Projects</a></li>
 
             <li class="uc nav-item"><a href="#publications" rel="“noreferrer”" class="nav-link active">Publications</a></li>
-            <li class="uc nav-item"><a href="https://blog.sakshamchecker.me" rel="“noreferrer”" class="nav-link active">Blog</a></li>
+            <li class="uc nav-item"><a href="https://blog.sakshamchecker.com" rel="“noreferrer”" class="nav-link active">Blog</a></li>
 
               <li>    </li>
             </ul>
@@ -185,7 +185,7 @@
                     <!--Enter your social media links here-->
                     <li><a href="https://github.com/sakshamchecker"><i class="fab fa-github gt1"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/sakshamchecker"><i class="fab fa-linkedin-in ln1"></i></a></li>
-                    <li><a href="mail:checkersaksham01@gmail.com"><i class="fas fa-at el1"></i></a></li>
+                    <li><a href="mailto:contact@sakshamchecker.com"><i class="fas fa-at el1"></i></a></li>
                     <li><a href="https://twitter.com/sakshamchecker"><i class="fab fa-twitter twtr1"></i></a></li>
                 </ul>
             </div>
