--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li class="uc nav-item"><a href="#projects" rel="“noreferrer”" class="nav-link active">Projects</a></li>
 
             <li class="uc nav-item"><a href="#publications" rel="“noreferrer”" class="nav-link active">Publications</a></li>
-            <li class="uc nav-item"><a href="https://blog.sakshamchecker.com" rel="“noreferrer”" class="nav-link active">Blog</a></li>
+            <li class="uc nav-item"><a href="/blog" rel="“noreferrer”" class="nav-link active">Blog</a></li>
 
               <li>    </li>
             </ul>
@@ -70,7 +70,7 @@
             <li class="uc nav-item"><a href="#projects" rel="“noreferrer”" class="nav-link active">Projects</a></li>
 
             <li class="uc nav-item"><a href="#publications" rel="“noreferrer”" class="nav-link active">Publications</a></li>
-            <li class="uc nav-item"><a href="https://blog.sakshamchecker.me" rel="“noreferrer”" class="nav-link active">Blog</a></li>
+            <li class="uc nav-item"><a href="/blog"" rel="“noreferrer”" class="nav-link active">Blog</a></li>
             
             <li>    </li>
 
@@ -266,7 +266,7 @@
     </div>
 
 <footer>
-    <div class="footer"> Site By <a href="https://sakshamchecker.me">Saksham Checker</a><br><br>
+    <div class="footer"> Site By <a href="https://sakshamchecker.com">Saksham Checker</a><br><br>
     <div class="rounded-social-buttons">
         <a class="social-button facebook" href="https://www.facebook.com/sakshamchecker" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <!-- <a class="social-button twitter" href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a> -->
