--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <p>Hi there! I am Saksham Checker from New Delhi, 🇮🇳<br>
 			I am currently pursuing Bachelor of Engineering from Delhi Technological University.<br>
 			</p>
-		        <a class="resume" href="/asset/img/resume.pdf">Resume</a>
+		        <a class="resume" href="/resume.pdf">Resume</a>
             </div>
         </div>
         <div class="container container2">
