--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="title">CNFMD: Convolutional Network-based Face Mask Detection </div>
             <div class="dec">
                 <p> Face mask detection study published in World Journal of Advanced Research and Reviews</p>
-                <br> <a href=https://doi.org/10.30574/wjarr.2022.13.2.0142">DOI</a>
+                <br> <a href=https://doi.org/10.30574/wjarr.2022.13.2.0142>DOI</a>
                 <!-- <br> <a href="https://github.com/sakshamchecker/SateliteImageClassification">Github</a> -->
 
             </div>
