--- a/index.html
+++ b/index.html
@@ -274,6 +274,14 @@
                 <br> <a href="https://sakshamchecker.medium.com/brain-tumor-segmentation-using-deep-learning-models-5047984b53c0">Medium</a>
             </div>
         </div>
+         <div class="project-card" data-aos="zoom-in-up" data-aos-duration="1500">
+            <img src="/asset/img/sv.jpg" alt="">
+            <div class="title">Savinodam</div>
+            <div class="dec">
+                <p> Participated in Toycathon 2021 organized by the innovation cell of Ministry of Education along with AIEEE. Out of the initial 17000+ ideas nation-wide, our team reached the final round of the competition with 270(approx.) participating teams. We created a Unity based game, reviving Sanskrit through ancient Gurus themselves</p>
+                <br> <a href="ttps://github.com/sakshamchecker/Savinodam">Github</a>
+            </div>
+        </div>
     </div>
     <!--Dont forget to star and follow my account , It appriciates me to make more sites like this -->
     
