--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             </div>
         </div>
          <div class="project-card" data-aos="zoom-in-up" data-aos-duration="1500">
-            <img src="/asset/img/sv.jpg" alt="">
+            <img src="asset/img/sv.jpg" alt="">
             <div class="title">Savinodam</div>
             <div class="dec">
                 <p> Participated in Toycathon 2021 organized by the innovation cell of Ministry of Education along with AIEEE. Out of the initial 17000+ ideas nation-wide, our team reached the final round of the competition with 270(approx.) participating teams. We created a Unity based game, reviving Sanskrit through ancient Gurus themselves</p>
