--- a/index.html
+++ b/index.html
@@ -118,6 +118,22 @@
 		        <a class="resume" href="/resume.pdf">Resume</a>
             </div>
         </div>
+        <div class="container container1">
+            <div class="card card2 " data-aos="zoom-in-up" data-aos-duration="1000"> <span><b></b></span>
+
+        <div class="timeline">
+            <div class="outer">
+                <div class="cardd">
+                    <div class="info">
+                         <h3 class="title">Title 1</h3>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+        
         <div class="container container2">
             <div class="card card2 " data-aos="zoom-in-up" data-aos-duration="1000"> <span><b></b></span>
                 <br> <span> Programing</span>
