--- a/index.html
+++ b/index.html
@@ -120,16 +120,33 @@
         </div>
         <div class="container container1">
             <div class="card card2 " data-aos="zoom-in-up" data-aos-duration="1000"> <span><b></b></span>
-
+                <div class="title">Experirence</div>
         <div class="timeline">
             <div class="outer">
                 <div class="cardd">
                     <div class="info">
-                         <h3 class="title">Title 1</h3>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                         <h3 class="titlee">Researcher</h3>
+                         <p> CALIBRE - DTU   </p>
+                         <p>Jan 2021 - Present</p>
                     </div>
                 </div>
+            
+            <div class="cardd">
+                <div class="info">
+                     <h3 class="titlee">AI-ML Intern</h3>
+                     <p> HearUs  </p>
+                     <p>Jan 2022 - March 2022</p>
+                </div>
             </div>
+            <div class="cardd">
+                <div class="info">
+                     <h3 class="titlee">Title</h3>
+                     <p> blah blah  </p>
+                     <p>May 2022 - Present</p>
+                </div>
+
+        </div>
+
         </div>
         </div>
     </div>
