--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
             </div>
             <div class="cardd">
                 <div class="info">
-                     <h3 class="titlee">Title</h3>
-                     <p> blah blah  </p>
+                     <h3 class="titlee">Research Intern</h3>
+                     <p> Indian Institute of Technology, Dharwad  </p>
                      <p>May 2022 - Present</p>
                 </div>
 
