--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="title">Experirence</div>
         <div class="timeline">
             <div class="outer">
-                <div class="cardd">
+                <div class="cardd" >
                     <div class="info">
                          <h3 class="titlee">Researcher</h3>
                          <p> CALIBRE - DTU   </p>
@@ -131,11 +131,11 @@
                     </div>
                 </div>
             
-            <div class="cardd">
-                <div class="info">
-                     <h3 class="titlee">AI-ML Intern</h3>
-                     <p> HearUs  </p>
-                     <p>Jan 2022 - March 2022</p>
+            <div class="cardd" onclick="location.href='/certificates/HearUs.pdf';" id="smallbox">
+                <div class="info"  onclick="location.href='/certificates/HearUs.pdf';" id="smallbox">
+                     <h3 class="titlee"  onclick="location.href='/certificates/HearUs.pdf';" id="smallbox">AI-ML Intern</h3>
+                     <p  onclick="location.href='/certificates/HearUs.pdf';" id="smallbox"> HearUs  </p>
+                     <p  onclick="location.href='/certificates/HearUs.pdf';" id="smallbox">Jan 2022 - March 2022</p>
                 </div>
             </div>
             <div class="cardd">
