--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="info">
                      <h3 class="titlee">Research Intern</h3>
                      <p> Indian Institute of Technology, Dharwad  </p>
-                     <p>May 2022 - Present</p>
+                     <p>May 2022 - July 2022</p>
                 </div>
 
         </div>
@@ -241,6 +241,20 @@
             <path id="projectsvg" d="" />
         </svg>
         <span>Publications <i class="fas fa-project-diagram"></i></span>
+        
+        <div class="project-card" data-aos="zoom-in-up" data-aos-duration="2000">
+            <!--Use the sample tempalte below for other projects of urs-->
+            <!-- <img src="/asset/img/project1.png" alt=""> -->
+            <div class="title">Fake News Detection System Using Featured-Based Optimized MSVM Classification </div>
+            <div class="dec">
+                <p> A novel fake news detection system, published in IEEE Access Journal</p>
+                <br> <a href=https://doi.org/10.1109/ACCESS.2022.3216892>DOI</a>
+                <!-- <br> <a href="https://github.com/sakshamchecker/SateliteImageClassification">Github</a> -->
+
+            </div>
+        </div>
+
+
         <div class="project-card" data-aos="zoom-in-up" data-aos-duration="2000">
             <!--Use the sample tempalte below for other projects of urs-->
             <!-- <img src="/asset/img/project1.png" alt=""> -->
