--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
         </div>
         <div class="container container1">
             <div class="card card2 " data-aos="zoom-in-up" data-aos-duration="1000"> <span><b></b></span>
-                <div class="title">Experirence</div>
+                <div class="title">Experience
+                    
+                </div>
         <div class="timeline">
             <div class="outer">
                 <div class="cardd">
