--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
             }
         });
     </script>
+    <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-KM8VYVLN61"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-KM8VYVLN61');
+        </script>
 </head>
 
 <body oncontextmenu="return false;"  onmousedown = 'return false;' onselectstart = 'return false;' >
