--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
     <!-- End Google Tag Manager (noscript) -->
     <!--add a Popup displaying hello on website open in a box , in center with two options, first to download resume, other to continue to website-->
     <!--Blur out the content behind when the popup is open-->
-  
+    <!--Add click ID to the click-->
     <div class="popup">
         <div class = "popup-background"> </div>
         <div class="popup-content">
             <div class="popup-text">
                 <h1>Hello!</h1>
                 <p>Thank you for visiting. In order to access my latest projects, kindly download my updated Resume/CV</p>
-                <a href="/resume.pdf" class="resume">Download Latest Resume</a>
+                <a href="/resume.pdf" class="resume" id="resume_down" >Download Latest Resume</a>
                 <a href="#" class="close">Continue</a>
             </div>
         </div>
