--- a/lavanya/no.html
+++ b/lavanya/no.html
@@ -46,7 +46,7 @@
         <!-- add text, Too bad, do you wanna rethink it? -->
         <h1>Too bad, do you wanna rethink it?</h1>
         <!-- add a button, if yes is clicked, go to some page, if no is clicked, popup a GIF -->
-        <button type="button_green" onclick="location.href='yes.html';">Yes</button>
+        <button type="button_green" onclick="location.href='index.html';">Yes</button>
         <button type="button_red" onclick="location.href='no.html';">No</button>
     </center>
     </body>
