--- a/lavanya/no.html
+++ b/lavanya/no.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title> No</title>
     <style>
         button[type=button_green] {
             background-color: #4CAF50; /* Green */
