--- a/lavanya/yes.html
+++ b/lavanya/yes.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+    <title>Valentine Week</title>
+</head>
     <body>
         <center>
         <!-- check if date is 7th feb, show some GIF, else if day is 8th feb, show some other and like this till 14th feb -->
