--- a/lavanya/index.html
+++ b/lavanya/index.html
@@ -54,7 +54,7 @@
         <button style="background-color: #f44336; /* Red */" type="button">No</button> -->
         <!-- add better buttons, not just color, add animations too -->
         <!-- add will you be my valientine question -->
-        <h1>Are you ready to join the Valentine Week Journey with me?</h1>
+        <h1>Are you ready to continue the Valentine Week Journey with me?</h1>
         <br>
         <!-- if yes is clicked, go to some page, if no is clicked, popup a GIF -->
         <button type="button_green" onclick="location.href='yes.html';">Yes</button>
