--- a/lavanya/yes.html
+++ b/lavanya/yes.html
@@ -14,7 +14,7 @@
             var month = today.getMonth()+1;
             var year = today.getFullYear();
             var today = date;
-            if(day == 8 && month == 2){
+            if(day == 7 && month == 2){
                 document.write('<div class="tenor-gif-embed" data-postid="25153986" data-share-method="host" data-aspect-ratio="1" data-width="50%"><a href="https://tenor.com/view/tkthao219-bubududu-gif-25153986">Tkthao219 Bubududu Sticker</a>from <a href="https://tenor.com/search/tkthao219-stickers">Tkthao219 Stickers</a></div> ');
                 document.write('<h1>Happy Rose Day</h1>')
                 document.write('<h2> Dont forget the song of the day</h2>')
@@ -22,11 +22,12 @@
 
                 document.write('<audio controls autoplay><source src="rose.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio>')
             }
-            else if(day == 7 && month == 2){
+            else if(day == 8 && month == 2){
                 document.write('<div class="tenor-gif-embed" data-postid="17221496" data-share-method="host" data-aspect-ratio="1.29555" data-width="50%"><a href="https://tenor.com/view/hey-milk-and-mocha-bear-poke-carrot-hearts-gif-17221496">Hey Milk And Mocha Bear GIF</a>from <a href="https://tenor.com/search/hey-gifs">Hey GIFs</a></div>')
                 document.write('<h1> Now that you have accepted my rose, will you be my valentine?</h1>')
-                document.write('<h2> Accept by sending a cutie selfie on whatsapp</h2>')
-                document.write('<h2> Dont forget the song of the day</h2>')
+                document.write('<h2> Accept by sending a cutie selfie on whatsapp right now, even if you half asleep</h2>')
+                document.write('<h3> Okays don`t work, only selfies do</h3>')
+                document.write('<h2> Don`t forget the song of the day</h2>')
                 // add song of the day
                 document.write('<audio controls autoplay><source src="naina.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio>')
             }
