--- a/lavanya/yes.html
+++ b/lavanya/yes.html
@@ -32,7 +32,13 @@
                 document.write('<audio controls autoplay><source src="naina.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio>')
             }
             else if(day == 9 && month == 2){
-                document.write("<img src='https://media.giphy.com/media/3o7aD5z5x8y3pMSXvS/giphy.gif' alt='Will you be my valentine?' width='500' height='500'>");
+                document.write('<div class="tenor-gif-embed" data-postid="20143168" data-share-method="host" data-aspect-ratio="1" data-width="50%"><a href="https://tenor.com/view/peach-goma-gif-20143168">Peach Goma Sticker</a>from <a href="https://tenor.com/search/peach-stickers">Peach Stickers</a></div>');
+                document.write('<h1>Happy Chocolate Day</h1>')
+                document.write('<h2> Couldn`t find a GIF for chocolate day, so here is a cute one of me in your hands in the evening, eating chocolate</h2>')
+                document.write('<h3> I will be waiting for you to come and feed me chocolate (I will bring the chocolate)</h3>')
+                document.write('<h2> Don`t forget the song of the day</h2>')
+                // add song of the day
+                document.write('<audio controls autoplay><source src="pyaar.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio>')
             }
             else if(day == 10 && month == 2){
                 document.write("<img src='https://media.giphy.com/media/3o7aD5z5x8y3pMSXvS/giphy.gif' alt='Will you be my valentine?' width='500' height='500'>");
