--- a/lavanya/yes.html
+++ b/lavanya/yes.html
@@ -41,7 +41,18 @@
                 document.write('<audio controls autoplay><source src="pyaar.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio>')
             }
             else if(day == 10 && month == 2){
-                document.write("<img src='https://media.giphy.com/media/3o7aD5z5x8y3pMSXvS/giphy.gif' alt='Will you be my valentine?' width='500' height='500'>");
+                // document.write("<img src='https://media.giphy.com/media/3o7aD5z5x8y3pMSXvS/giphy.gif' alt='Will you be my valentine?' width='500' height='500'>");
+                //add teddy.png
+                document.write('<img src="teddy.png" width="500" height="500">');
+                document.write('<h1>Happy Teddy Day</h1>')
+                // add a text saying I am sorry for the delay
+                document.write('<h2> I am sorry for the delay today :(</h2>')
+                document.write('<h2> I am waiting for you to come and hug me</h2>')
+                // who needs a gif, you are the best teddy- write this
+                document.write('<h2> Who needs a GIF, when I have the best teddy in the world</h2>')
+                document.write('<h2> Don`t forget the song of the day</h2>')
+                // add song of the day
+                document.write('<audio controls autoplay><source src="ishq.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio>')
             }
             else if(day == 11 && month == 2){
                 document.write("<img src='https://media.giphy.com/media/3o7aD5z5x8y3pMSXvS/giphy.gif' alt='Will you be my valentine?' width='500' height='500'>");
