--- a/lavanya/yes.html
+++ b/lavanya/yes.html
@@ -55,7 +55,14 @@
                 document.write('<audio controls autoplay><source src="ishq.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio>')
             }
             else if(day == 11 && month == 2){
-                document.write("<img src='https://media.giphy.com/media/3o7aD5z5x8y3pMSXvS/giphy.gif' alt='Will you be my valentine?' width='500' height='500'>");
+                
+                document.write('<div class="tenor-gif-embed" data-postid="15243434" data-share-method="host" data-aspect-ratio="1.07023" data-width="50%"><a href="https://tenor.com/view/pinky-promise-bear-teddy-bear-cute-gif-15243434">Pinky Promise Bear GIF</a>from <a href="https://tenor.com/search/pinky+promise-gifs">Pinky Promise GIFs</a></div>')
+                // write - 
+                document.write('<h1> This promise day i promise to be your side forever and always and shower you with allll my love</h1>') 
+                document.write('<h2> I am waiting for you to come and make a promise to be with me forever</h2>')
+                document.write('<h2> Don`t forget the song of the day</h2>')
+                // add song of the day
+                document.write('<audio controls autoplay><source src="prom.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio>')          
             }
             else if(day == 12 && month == 2){
                 document.write("<img src='https://media.giphy.com/media/3o7aD5z5x8y3pMSXvS/giphy.gif' alt='Will you be my valentine?' width='500' height='500'>");
