--- a/lavanya/yes.html
+++ b/lavanya/yes.html
@@ -65,14 +65,38 @@
                 document.write('<audio controls autoplay><source src="prom.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio>')          
             }
             else if(day == 12 && month == 2){
-                document.write("<img src='https://media.giphy.com/media/3o7aD5z5x8y3pMSXvS/giphy.gif' alt='Will you be my valentine?' width='500' height='500'>");
+                // document.write("<img src='https://media.giphy.com/media/3o7aD5z5x8y3pMSXvS/giphy.gif' alt='Will you be my valentine?' width='500' height='500'>");
+                document.write('<div class="tenor-gif-embed" data-postid="24739451" data-share-method="host" data-aspect-ratio="1.18959" data-width="100%"><a href="https://tenor.com/view/cute-bears-love-gif-24739451">Cute Bears Love Sticker</a>from <a href="https://tenor.com/search/cute+bears+love-stickers">Cute Bears Love Stickers</a></div>')
+                document.write('<h1>Happy Hug Day</h1>')
+                document.write('<h2> Hug be pending till we meet :( </h2>')
+                document.write('<h3> I will give you the tightest hug</h3>')
+                document.write('<h2> Don`t forget the song of the day</h2>')
+                // add song of the day
+                document.write('<audio controls autoplay><source src="hug.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio>')
             }
             else if(day == 13 && month == 2){
-                document.write('<div class="tenor-gif-embed" data-postid="22536058" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/bear-kiss-bear-kisses-kiss-kisses-love-gif-22536058">Bear Kiss Bear Kisses Sticker</a>from <a href="https://tenor.com/search/bear+kiss-stickers">Bear Kiss Stickers</a></div>');
-                
+                // document.write('<div class="tenor-gif-embed" data-postid="22536058" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/bear-kiss-bear-kisses-kiss-kisses-love-gif-22536058">Bear Kiss Bear Kisses Sticker</a>from <a href="https://tenor.com/search/bear+kiss-stickers">Bear Kiss Stickers</a></div>');
+                //add image kiss.png
+                document.write('<img src="kiss.jpg" width="500" height="500">');
+                document.write('<h1>Happy Kiss Day</h1>')
+                document.write('<h2> Kiss also be pending till we meet :( </h2>')
+                document.write('<h3> I will give you the sweetest kiss</h3>')
+
+                document.write('<h2> Don`t forget the song of the day</h2>')
+                // add song of the day
+                document.write('<audio controls autoplay><source src="kiss.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio>')
             }
             else if(day == 14 && month == 2){
-                document.write("<img src='https://media.giphy.com/media/3o7aD5z5x8y3pMSXvS/giphy.gif' alt='Will you be my valentine?' width='500' height='500'>");
+                // document.write("<img src='https://media.giphy.com/media/3o7aD5z5x8y3pMSXvS/giphy.gif' alt='Will you be my valentine?' width='500' height='500'>");
+                //write whats better than cuddles on valentines day
+                document.write('<h1> what is better than cuddles on valentines day?</h1>')
+                document.write('<div class="tenor-gif-embed" data-postid="26097868" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/cuddles-panda-bear-gif-26097868">Cuddles Panda Sticker</a>from <a href="https://tenor.com/search/cuddles-stickers">Cuddles Stickers</a></div> ')
+                document.write('<h2> I love you the mooooooooooooooooooooooooooooooooooooooooosteeeeeeeeeest</h2>')
+                document.write('<h3> Hoping you saw this exactly at midnight, a text mentioning that you saw this would be nice </h3>')
+                document.write('<h2> Don`t forget the song of the day</h2>')
+                // add song of the day
+                document.write('<audio controls autoplay><source src="val.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio>')
+
             }
     
         </script>
